--- a/DouDiZhu/proj.win32/DouDiZhu.vcxproj
+++ b/DouDiZhu/proj.win32/DouDiZhu.vcxproj
@@ -147,6 +147,7 @@ xcopy /Y /Q "$(COCOS_FRAMEWORKS)\cocos2d-x-3.8.1\prebuilt\win32\*.*" "$(OutDir)"
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
+    <ClCompile Include="..\Classes\GameRules.cpp" />
     <ClCompile Include="..\Classes\GameScene.cpp" />
     <ClCompile Include="..\Classes\GlobalFunc.cpp" />
     <ClCompile Include="..\Classes\Player.cpp" />
@@ -162,6 +163,8 @@ xcopy /Y /Q "$(COCOS_FRAMEWORKS)\cocos2d-x-3.8.1\prebuilt\win32\*.*" "$(OutDir)"
     <ClInclude Include="..\Classes\Player.h" />
     <ClInclude Include="..\Classes\Poker.h" />
     <ClInclude Include="..\Classes\PokerController.h" />
+    <ClInclude Include="..\Classes\GameRules.h" />
+    <ClInclude Include="..\Classes\PokerValueType.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
