1.玩家和电脑的出牌逻辑完成; 2.玩家的出牌逻辑经过测试，暂时没有问题；

--- a/DouDiZhu/proj.win32/DouDiZhu.vcxproj
+++ b/DouDiZhu/proj.win32/DouDiZhu.vcxproj
@@ -150,6 +150,7 @@ xcopy /Y /Q "$(COCOS_FRAMEWORKS)\cocos2d-x-3.8.1\prebuilt\win32\*.*" "$(OutDir)"
     <ClCompile Include="..\Classes\GameRules.cpp" />
     <ClCompile Include="..\Classes\GameScene.cpp" />
     <ClCompile Include="..\Classes\GlobalFunc.cpp" />
+    <ClCompile Include="..\Classes\OutCards.cpp" />
     <ClCompile Include="..\Classes\Player.cpp" />
     <ClCompile Include="..\Classes\Poker.cpp" />
     <ClCompile Include="..\Classes\PokerController.cpp" />
@@ -160,6 +161,7 @@ xcopy /Y /Q "$(COCOS_FRAMEWORKS)\cocos2d-x-3.8.1\prebuilt\win32\*.*" "$(OutDir)"
     <ClInclude Include="..\Classes\GameScene.h" />
     <ClInclude Include="..\Classes\GlobalDefine.h" />
     <ClInclude Include="..\Classes\GlobalFunc.h" />
+    <ClInclude Include="..\Classes\OutCards.h" />
     <ClInclude Include="..\Classes\Player.h" />
     <ClInclude Include="..\Classes\Poker.h" />
     <ClInclude Include="..\Classes\PokerController.h" />
