--- a/DouDiZhu/Resources/Image/playerOrderState.plist
+++ b/DouDiZhu/Resources/Image/playerOrderState.plist
@@ -7,7 +7,7 @@
             <key>flagcall_0.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,171},{48,24}}</string>
+                <string>{{28,52},{48,24}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -20,63 +20,63 @@
             <key>flagcall_1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,62},{113,57}}</string>
+                <string>{{2,102},{48,24}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{113,57}}</string>
+                <string>{{0,0},{48,24}}</string>
                 <key>sourceSize</key>
-                <string>{113,57}</string>
+                <string>{48,24}</string>
             </dict>
             <key>flagcall_2.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{118,61},{113,57}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{0,0},{113,57}}</string>
-                <key>sourceSize</key>
-                <string>{113,57}</string>
-            </dict>
-            <key>flagcall_3.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{118,2},{113,57}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{0,0},{113,57}}</string>
-                <key>sourceSize</key>
-                <string>{113,57}</string>
-            </dict>
-            <key>pass.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,2},{114,58}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{0,0},{114,58}}</string>
-                <key>sourceSize</key>
-                <string>{114,58}</string>
-            </dict>
-            <key>ready.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,121},{48,24}}</string>
+                <string>{{2,52},{48,24}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <true/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{48,24}}</string>
+                <key>sourceSize</key>
+                <string>{48,24}</string>
+            </dict>
+            <key>flagcall_3.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{102,2},{48,24}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{48,24}}</string>
+                <key>sourceSize</key>
+                <string>{48,24}</string>
+            </dict>
+            <key>pass.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{52,2},{48,24}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{48,24}}</string>
+                <key>sourceSize</key>
+                <string>{48,24}</string>
+            </dict>
+            <key>ready.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,2},{48,24}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{0,0},{48,24}}</string>
                 <key>sourceSize</key>
@@ -90,9 +90,9 @@
             <key>realTextureFileName</key>
             <string>playerOrderState.png</string>
             <key>size</key>
-            <string>{256,256}</string>
+            <string>{128,128}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:38a7528b1434cfe0f16012f24e7191c9:1/1$</string>
+            <string>$TexturePacker:SmartUpdate:4b89b45dcd11ea413e303737c2b63d66:1/1$</string>
             <key>textureFileName</key>
             <string>playerOrderState.png</string>
         </dict>
