1.添加加载界面和主界面; 2.修改玩家提示功能,可以拆牌找到应对上一家的牌面; 3.修改了若干BUG; 4.连续游戏时,第二次结时会引发崩溃,暂时未找到原因;

--- a/DouDiZhu/proj.win32/DouDiZhu.vcxproj
+++ b/DouDiZhu/proj.win32/DouDiZhu.vcxproj
@@ -153,6 +153,7 @@ xcopy /Y /Q "$(COCOS_FRAMEWORKS)\cocos2d-x-3.8.1\prebuilt\win32\*.*" "$(OutDir)"
     <ClCompile Include="..\Classes\GlobalFunc.cpp" />
     <ClCompile Include="..\Classes\HeadImage.cpp" />
     <ClCompile Include="..\Classes\LoadScene.cpp" />
+    <ClCompile Include="..\Classes\Lobby.cpp" />
     <ClCompile Include="..\Classes\MusicController.cpp" />
     <ClCompile Include="..\Classes\OutCards.cpp" />
     <ClCompile Include="..\Classes\Player.cpp" />
@@ -169,6 +170,7 @@ xcopy /Y /Q "$(COCOS_FRAMEWORKS)\cocos2d-x-3.8.1\prebuilt\win32\*.*" "$(OutDir)"
     <ClInclude Include="..\Classes\GlobalFunc.h" />
     <ClInclude Include="..\Classes\HeadImage.h" />
     <ClInclude Include="..\Classes\LoadScene.h" />
+    <ClInclude Include="..\Classes\Lobby.h" />
     <ClInclude Include="..\Classes\MusicController.h" />
     <ClInclude Include="..\Classes\OutCards.h" />
     <ClInclude Include="..\Classes\Player.h" />
