--- a/DouDiZhu/proj.win32/DouDiZhu.vcxproj
+++ b/DouDiZhu/proj.win32/DouDiZhu.vcxproj
@@ -147,11 +147,14 @@ xcopy /Y /Q "$(COCOS_FRAMEWORKS)\cocos2d-x-3.8.1\prebuilt\win32\*.*" "$(OutDir)"
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
+    <ClCompile Include="..\Classes\ComputerPlayer.cpp" />
+    <ClCompile Include="..\Classes\CoundDown.cpp" />
     <ClCompile Include="..\Classes\GameAnimation.cpp" />
     <ClCompile Include="..\Classes\GameRules.cpp" />
     <ClCompile Include="..\Classes\GameScene.cpp" />
     <ClCompile Include="..\Classes\GlobalFunc.cpp" />
     <ClCompile Include="..\Classes\HeadImage.cpp" />
+    <ClCompile Include="..\Classes\HolderPlayer.cpp" />
     <ClCompile Include="..\Classes\LoadScene.cpp" />
     <ClCompile Include="..\Classes\Lobby.cpp" />
     <ClCompile Include="..\Classes\MusicController.cpp" />
@@ -164,11 +167,14 @@ xcopy /Y /Q "$(COCOS_FRAMEWORKS)\cocos2d-x-3.8.1\prebuilt\win32\*.*" "$(OutDir)"
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
+    <ClInclude Include="..\Classes\ComputerPlayer.h" />
+    <ClInclude Include="..\Classes\CountDown.h" />
     <ClInclude Include="..\Classes\GameAnimation.h" />
     <ClInclude Include="..\Classes\GameScene.h" />
     <ClInclude Include="..\Classes\GlobalDefine.h" />
     <ClInclude Include="..\Classes\GlobalFunc.h" />
     <ClInclude Include="..\Classes\HeadImage.h" />
+    <ClInclude Include="..\Classes\HolderPlayer.h" />
     <ClInclude Include="..\Classes\LoadScene.h" />
     <ClInclude Include="..\Classes\Lobby.h" />
     <ClInclude Include="..\Classes\MusicController.h" />
